--- a/Homework_3/6 Нарисовать горку с помощью console.log (используя цикл for)/6.html
+++ b/Homework_3/6 Нарисовать горку с помощью console.log (используя цикл for)/6.html
@@ -8,7 +8,13 @@
 </head>
 
 <body>
-    <script src="5.js"></script>
+    <script>
+        'use strict';
+
+        for (let x = 'x'; x.length <= 20; x += 'x') {
+            console.log(x);
+        }
+    </script>
 </body>
 
 </html>
